--- a/style.css
+++ b/style.css
@@ -2,7 +2,13 @@
     font-family: roboto;
 }
 
+html {
+    height: 100%;
+}
+
 body {
+    min-height: 100%;
+    padding: 0px;
     margin: 0px;
     display: flex;
     flex-direction: column;
@@ -64,7 +70,7 @@ button.heroSignup {
 
 /* randomInfo */
 .randomInfo {
-    flex: 1;
+    flex-grow: 1;
     padding-bottom: 80px;
 }
 
@@ -108,9 +114,10 @@ button.heroSignup {
 
 /* quote */
 .quote {
-    flex: 1;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 100px 20%;
     background-color: #E5E7EB;
 }
@@ -167,7 +174,6 @@ button.signupButton {
 
 /* footer */
 .footer {
-    margin-top: auto;
     text-align: center;
     padding-top: 30px;
     padding-bottom: 30px;
